# kronkworld

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
include/kronkworld/: Kronkworld.hpp
include/kronkworld/component/: Component.hpp  ComponentBox.hpp  ComponentError.hpp
include/kronkworld/entity/: Entity.hpp  EntityError.hpp
include/kronkworld/iterator/: ViewIterator.hpp
include/kronkworld/ressource/: IResource.hpp  Resource.hpp  ResourceError.hpp  RessourceManager.hpp
include/kronkworld/system/: ISystem.hpp  System.hpp
include/kronkworld/world/: View.hpp  World.hpp
test/: Benchmark.cpp  Main.cpp
tests/benchmark/: benchmark_view.cpp
tests/unit/: components.cpp  entities.cpp  resource.cpp  systems.cpp
